--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,18 @@ export(add_colored_box)
 export(add_colored_str)
 export(color_set_palette)
 export(color_test_palette)
+export(time_plot_interval)
 export(trans_composition)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,arrow)
+importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRamp)
 importFrom(grDevices,colors)
