--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: mtb
 Type: Package
-Title: Toolkit for Time Related Data Presentation and Adding Colors to Markdown or Shiny 
-Version: 0.1.1
+Title: Toolkit for Assisting Kitchen and Garden Projects 
+Version: 0.1.4
 Authors@R: c(
     person("Y", "Hsu", email="yh202109@gmail.com", role=c('aut','cre'))
     )
-Description: The purpose of this package is to provide
-    a collection of functions for 
+Description: 
+    The purpose of this package is to share a collection of functions the author wrote during weekends for managing
+    kitchen and garden tasks, e.g. making plant growth charts or Thanksgiving kitchen schedule charts, etc. 
+    Functions might include but not limited to:
     (1) aiding summarizing time related data; 
     (2) generating axis transformation from data; and
     (3) aiding Markdown (with html output) and Shiny file editing.
