--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,25 @@ export(add_colored_box)
 export(add_colored_str)
 export(color_set_palette)
 export(color_test_palette)
+export(time_plot_event)
 export(time_plot_interval)
 export(trans_composition)
+export(trans_loglinear)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,arrow)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
@@ -28,6 +37,10 @@ importFrom(htmltools,HTML)
 importFrom(htmltools,tags)
 importFrom(labeling,extended)
 importFrom(scales,identity_trans)
+importFrom(scales,log_breaks)
+importFrom(scales,log_trans)
+importFrom(scales,trans_new)
+importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
 importFrom(stats,dnorm)
