--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(trans_loglinear)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,arrow)
+importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
