--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mtb
 Type: Package
 Title: My Toolbox for Assisting Document Editing and Data Presenting
-Version: 0.1.8
+Version: 0.1.9
 Authors@R: c(
     person("Y", "Hsu", email="yh202109@gmail.com", role=c('aut','cre'))
     )
@@ -12,7 +12,7 @@ Description:
     (1) aiding summarizing time related data; 
     (2) generating axis transformation from data; and
     (3) aiding Markdown (with html output) and Shiny file editing.
-License: AGPL (>= 3)
+License: GPL (>= 3)
 Encoding: UTF-8
 Depends:
     R (>= 4.1)
@@ -29,6 +29,6 @@ Suggests:
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 URL: https://github.com/yh202109/mtb
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
 Language: en-US
 LazyData: true
