--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,34 +1,36 @@
 Package: mtb
 Type: Package
 Title: My Toolbox for Assisting Document Editing and Data Presenting
-Version: 0.1.9
+Version: 0.1.10
 Authors@R: c(
     person("Y", "Hsu", , "yh202109@gmail.com", role = c("aut", "cre"))
   )
 Description: 
     The purpose of this package is to share a collection of functions the author wrote during weekends for managing
     kitchen and garden tasks, e.g. making plant growth charts or Thanksgiving kitchen schedule charts, etc. 
-    Functions might include but not limited to:
-    (1) aiding summarizing time related data; 
-    (2) generating axis transformation from data; and
-    (3) aiding Markdown (with html output) and Shiny file editing.
+    Functions may include but are not limited to:
+    (1) aiding in summarizing time-related data;
+    (2) generating axis transformations from data; and
+    (3) aiding Markdown (with HTML output) and Shiny file editing.
 License: GPL (>= 3)
 Encoding: UTF-8
 Depends:
     R (>= 4.1)
 Imports: 
     htmltools (>= 0.4.0),
-    ggplot2 (>= 3.3.0),
-    scales (>= 1.0.0),
+    ggplot2 (>= 3.4.0),
+    scales (>= 1.3.0),
     data.table (>= 1.14.2),
-    labeling (>= 0.3)
+    labeling (>= 0.3),
+    rlang (>= 1.0.0)
 Suggests: 
     rmarkdown (>= 1.16),
     knitr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    dplyr (>= 1.1.4)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 URL: https://github.com/yh202109/mtb
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Language: en-US
 LazyData: true
