--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ export(bill_cross_check)
 export(bill_cross_count)
 export(color_set_palette)
 export(color_test_palette)
+export(crosstab_from_list)
 export(time_plot_event)
 export(time_plot_interval)
 export(trans_composition)
 export(trans_loglinear)
 import(data.table)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_string)
 importFrom(ggplot2,arrow)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_blank)
@@ -40,13 +40,11 @@ importFrom(graphics,plot)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tags)
 importFrom(labeling,extended)
-importFrom(scales,identity_trans)
-importFrom(scales,log_breaks)
-importFrom(scales,log_trans)
-importFrom(scales,trans_new)
+importFrom(rlang,.data)
+importFrom(scales,new_transform)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
-importFrom(stats,approxfun)
 importFrom(stats,dnorm)
+importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
