--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,13 +1,14 @@
-pandoc: '3.2'
-pkgdown: 2.1.1
+pandoc: 3.6.3
+pkgdown: 2.2.0
 pkgdown_sha: ~
 articles:
   mtb_axis: mtb_axis.html
   mtb_bill_summary: mtb_bill_summary.html
+  mtb_cd_gt3summary: mtb_cd_gt3summary.html
   mtb_color: mtb_color.html
   mtb_md: mtb_md.html
   mtb_timerelated: mtb_timerelated.html
-last_built: 2025-03-01T17:06Z
+last_built: 2026-02-21T18:46Z
 urls:
   reference: https://yh202109.github.io/mtb/reference
   article: https://yh202109.github.io/mtb/articles
